fixed scaling issue on iOS and MacOS browsers

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -49,9 +49,9 @@ body.dark {
   }
 }
 
-/* * {
+* {
   transition: 0.2s;
-} */
+}
 
 .small-code {
   display: inline-block;
